[gd_scene load_steps=3 format=3 uid="uid://j3ostc4r7ccw"]

[ext_resource type="Script" path="res://inventario.gd" id="1_uqm7j"]

[sub_resource type="LabelSettings" id="LabelSettings_3gqdt"]
font_size = 30
shadow_size = 3
shadow_color = Color(0.34902, 0.235294, 0.235294, 0)
shadow_offset = Vector2(3, 3)

[node name="inventario" type="Node2D"]
script = ExtResource("1_uqm7j")
metadata/_edit_horizontal_guides_ = [812.0]

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = -37.0
offset_top = 793.0
offset_right = 468.0
offset_bottom = 859.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/HBoxContainer"]
position = Vector2(96, 42)
scale = Vector2(0.5, 0.46875)

[node name="ItemCounter" type="Label" parent="PanelContainer/HBoxContainer/Sprite2D"]
offset_left = -46.0
offset_top = -78.9333
offset_right = 48.0
offset_bottom = -31.9333
label_settings = SubResource("LabelSettings_3gqdt")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="next" type="Button" parent="."]
process_mode = 3
offset_left = 89.0
offset_top = 812.0
offset_right = 107.0
offset_bottom = 843.0
text = ">"

[node name="back" type="Button" parent="."]
process_mode = 3
offset_left = 11.0
offset_top = 812.0
offset_right = 29.0
offset_bottom = 843.0
text = "<"

[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
